deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatnot-api
  namespace: whatnot-api
  labels:
    app: whatnot-api
spec:
  # replicas: 3
  # progressDeadlineSeconds: 60
  # strategy:
  # start up 1 new pod and then shut down 1 old pod
  # type: RollingUpdate
  # rollingUpdate:
  #   maxUnavailable: 0
  #   maxSurge: 1
  selector:
    matchLabels:
      app: whatnot-api
  template:
    metadata:
      labels:
        app: whatnot-api
    spec:
      containers:
        - name: whatnot-api
          image: whatnot-api:latest
          # image: 720766170633.dkr.ecr.us-east-1.amazonaws.com/whatnot-api:latest
          imagePullPolicy: Never
          # imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          #   initialDelaySeconds: 10
          #   periodSeconds: 30
          #   timeoutSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: http

---
apiVersion: v1
kind: Service
metadata:
  name: whatnot-api-svc
  namespace: whatnot-api
spec:
  ports:
    # - port: 5000
    - name: http
      port: 80
      targetPort: 5000
  selector:
    app: whatnot-api
