whatnot-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatnot-api
  namespace: whatnot-api
  labels:
    app: whatnot-api
spec:
  progressDeadlineSeconds: 60
  strategy:
    # start up 1 new pod and then shut down 1 old pod
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: whatnot-api
  template:
    metadata:
      labels:
        app: whatnot-api
    spec:
      containers:
        - name: whatnot-api
          # PRODUCTION
          # image: us-central1-docker.pkg.dev/whatnot-staging/whatnot-api/whatnot-api:latest
          image: digitalocean/flask-helloworld:latest
          imagePullPolicy: Always
          # LOCAL
          # image: whatnot-api:latest
          # imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http

---
apiVersion: v1
kind: Service
metadata:
  name: whatnot-api-svc
  namespace: whatnot-api
  labels:
    app: whatnot-api
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: whatnot-api
