ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whatnot-api-ingress
  namespace: whatnot-api
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    # upon instantiation add ingress IP and hostname "hello-world.info" to /etc/hosts as admin
    # - host: hello-world.info
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whatnot-api-svc
                port:
                  number: 5000
